--- a/src/freecodecamp-promises/index.html
+++ b/src/freecodecamp-promises/index.html
@@ -17,6 +17,10 @@
               <svg class="icon" width="22px" height="22px"><use href="#icon-search" /></svg>
             </div>
             </form>
+            <form onsubmit="search(event)" id="header_form">
+                <input type="search" class="header_form-input" placeholder="Search, Press Enter to Submit" />
+              <!--  -->
+              </form>
             <img id="img_icon" width="32px" height="32px" src="" alt="" >
           </div>
         </header>
